# lichess-bot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  game_manager.rs  main.rs
