[package]
name = "lichess-bot"
version = "0.1.0"
authors = ["Jiri Hartikka <jiri.hartikka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { git = "https://github.com/JiriHartikka/rust-chess-engine", package = "rust-chess", version = "0.1.0" }
reqwest = { version = "0.11.1", features = ["stream"] }
futures = "0.3.13"
tokio = { version = "1.2.0", features = ["full"] }
bytes = "1.0.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"